# grid_bot_monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
source/: constants.py  dependencies.py  logging_config.py  main.py  settings.py
source/application/: dto.py  exceptions.py  ports.py  utils.py
source/application/services/: decision_log_service.py  grid_builder.py  grid_service.py  indicator_service.py  oi_snapshot_service.py  run_daily_positioning_check.py  run_weekly_full_assessment.py
source/application/services/gates/: assess_liquidation_safety.py  assess_liquidation_safety_third_gate.py  assess_market_regime_first_gate.py  assess_positioning_second_gate.py
source/application/use_cases/: assess_liquidation_safety.py  assess_market_regime.py  assess_positioning.py  check_positioning_rules.py  check_regime_rules.py  liquidation_safety_checks.py  run_daily_positioning_check.py  run_weekly_full_assessment.py
source/application/use_cases/checkers/: base.py  run_daily_positioning_check.py  run_weekly_full_assessment.py
source/domain/: check_positioning_rueles.py  entities.py  exceptions.py  value_objects.py
source/infrastructure/: exceptions.py
source/infrastructure/database/: engine.py
source/infrastructure/database/alembic/: env.py
source/infrastructure/database/alembic/versions/: 2026_06_21_1717-ddf39e47226d_init_migrations.py  2026_06_22_2051-23324a53cd77_init_migrations.py  2026_06_22_2121-1e86a420479c_add_composite_index.py  2026_06_24_1743-af452be066a6_add_uniq_index_with_symbol_and_dt_.py  2026_06_27_2122-710804c9e445_create_new_table_for_launched_bot.py  2026_06_30_2318-0791d2ff7937_add_fields_in_launched.py
source/infrastructure/database/models/: __init__.py  base.py  models.py  types.py
source/infrastructure/database/repositories/: base.py  decision_repository.py  launched_grid_repository.py  oi_repository.py
source/infrastructure/database/repositories/alchemy/: base.py  decision_repository.py  filters.py  launched_grid_repository.py  snapshot_repository.py
source/infrastructure/database/repositories/filters/: alchemy.py  base.py
source/infrastructure/http/: auth_strategy.py  base.py  types.py
source/infrastructure/http/pionex/: auth_strategy.py  pionex_http_client.py  staleness_guard_adapter.py
source/infrastructure/pionex/: pionex_http_client.py
source/infrastructure/pionex/models/: schemas.py
source/infrastructure/telegram/: aiogram_notifier.py  formater.py
source/presentation/bot/handlers/: common_handlers.py  decision_handlers.py  launch_grid_handlers.py
source/presentation/bot/keyboards/: inlines.py
source/presentation/scheduler/: jobs.py
source/utils/: ensure.py  logging_config.py
tests/: conftest.py
tests/fixtures/: factories.py  fakes.py
tests/fixtures/pionex_responses/: check_params_error_min_investment.json  check_params_success.json  funding_rates_btc.json  klines_btc_4h.json  open_interest_btc.json
tests/integration/: test_full_assessment_pipeline.py
tests/integration/persistence/: test_decision_log_repository.py  test_oi_snapshot_repository.py
tests/integration/pionex/: test_grid_validation_adapter.py  test_market_data_adapter.py
tests/unit/application/formatters/: test_alert_formatter.py  test_digest_formatter.py
tests/unit/application/services/: test_decision_log_service.py  test_grid_proposal_builder.py  test_grid_service.py  test_indicator_service.py  test_oi_snapshot_service.py
tests/unit/application/use_cases/: test_run_daily_positioning_check.py  test_run_weekly_full_assessment.py
tests/unit/domain/: test_entities.py  test_gate_rules.py
tests/unit/presentation/bot/: test_decision_handlers.py
(+6 files in other folders)
