[project]
name = "grid-bot-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29.0",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
