[project]
name = "grid-bot-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pyclean>=3.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
allow_redefinition = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
warn_no_return = true
disallow_any_unimported = true
strict = true
implicit_reexport = false
warn_unused_ignores = false
files = ["source", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = [
    "comparison-overlap",
    "no-any-return",
    "arg-type",
    "union-attr",
    "operator",
    "return-value",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
